Introduce ways for the caller to retrieve evaluation errors
Bug: 459796
Change-Id: Ic7e013a85d86bad61c1606ef587f46ecb89b089c